fixed logout and toggle alignment

--- a/store-rest-api-frontend-react/src/components/Navigation/MainNavigation/MainNavigation.css
+++ b/store-rest-api-frontend-react/src/components/Navigation/MainNavigation/MainNavigation.css
@@ -1,6 +1,6 @@
 .navigation {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     z-index: 160;
@@ -9,6 +9,7 @@
 .navigation__nav {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 
